V1_EC2.tf
provider "aws"  {
    region = "ap-south-1"
}

//resource "aws_instance" "demo-server" {
//    ami = "ami-0f918f7e67a3323f0"
//    instance_type = "t2.micro"
//    tags = {
//      Name = "demo-server"
//    }
//}
